// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Small API 1`] = `
.c0 {
  font-size: 0.923rem;
}

<small
  className="c0"
>
  Small content
</small>
`;

exports[`Storyshots Small With color 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
  color: #00A1DE;
}

.c2 {
  font-size: 0.923rem;
}

.dulYnq > *:nth-child(2) .c0 {
  margin-top: 5px;
}

<div
  className="c0 c1"
  color="primary"
>
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="c2"
  >
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Small Within <P> 1`] = `
.c1 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c2 {
  font-size: 0.923rem;
}

.dulYnq > *:nth-child(2) .c0 {
  margin-top: 5px;
}

<div
  className="c0 c1"
>
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="c2"
  >
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;
